Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjObject.quorum
class Main
    action Main
        Object v
    Number t
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Number var)
    end
end
